--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,5 @@
 .lead__image {
-  width: 984px;
+  max-width: 984px;
   height: 615px;
   -o-object-fit: cover;
   object-fit: cover;
@@ -9,19 +9,19 @@
 
 @media screen and (max-width: 1220px) {
   .lead__image {
-    width: 928px;
+    max-width: 928px;
     height: 580px;
   }
 }
 
 @media screen and (max-width: 990px) {
   .lead__image {
-    width: 768px;
+    max-width: 768px;
     height: 480px;
   }
 }
 
-@media screen and (max-width: 758px) {
+@media screen and (max-width: 768px) {
   .lead__image {
     width: 100%;
     height: auto;
