--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -26,7 +26,7 @@
   }
 }
 
-@media screen and (max-width: 758px) {
+@media screen and (max-width: 768px) {
   .lead {
     max-width: 100%;
   }
